mlflow/mlflow-inference-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlflow-inference-service
  namespace: mlops
  labels:
    app: mlflow-inference-service
spec:
  type: ClusterIP
  selector:
    app: mlflow-inference
  ports:
  - name: tcp
    protocol: TCP
    port: 8000
    targetPort: 8000
