mlflow/mlflow-inference-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mlflow-inference-ingress
  namespace: mlops
  labels:
    app: mlflow-inference-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: mlflow-inference.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mlflow-inference-service
            port:
              number: 8000
  tls:
  - hosts:
    - mlflow-inference.local
    secretName: mlflow-inference-tls
